--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a href="./wbs.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
           <li><a href="./studio.html">Студія</a></li>
@@ -87,8 +87,7 @@
               src="./images/igor.jpg"
               width="300"
               alt="Чоловік"
-              width="300"
-            />
+              width="300"/>
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
@@ -111,7 +110,7 @@
       </section>
     </main>
     <footer>
-      <a href="./wbs.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <address>
         <a
           href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5358109,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv?entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D"
